# sonarfort-ai

./: .env.fortify  .env.sonar  Dockerfile  README.md  cors_patch.py  docker-compose.yml  dockerignore  notes.txt  requirements-merged.txt
fortify-ai/: .env.example  .gitignore  README.md  adr_fortify.py  api_server.py  config.py  fortify_auth.py  fortify_client.py  fortifyai.py  graph.py  job_store.py  offline_loader.py  pyproject.toml  requirements.txt  runtime_config.py  sample_report.json  state.py  token_tracker.py
fortify-ai/agents/: adr_fix.py  ai_code_fix.py  ai_reasoning.py  api_diff.py  context.py  failure_analysis.py  fortify_writeback.py  pr_agent.py  triage.py  version_resolver.py
sonar-ai/: README.md  agents.py  api.py  config.py  deliver.py  diff_repair.py  graph.py  main.py  parser.py  prompts.py  rag_store.py  repo_loader.py  requirements.txt  rule_kb.json  sample-report.json  sonar_rescan.py  state.py  test_iteration2.py  test_parser.py  test_repo_loader.py  validator.py  worker.py
sonar-ai/ui/sonar-ai/: README.md  angular.json  package-lock.json  package.json
sonar-ai/ui/sonar-ai/src/: index.html  styles.scss
sonar-ai/ui/sonar-ai/src/app/: app.component.spec.ts  (+2 more)
ui/: angular.json  package-lock.json  package.json  tsconfig.json
ui/src/: index.html
ui/src/app/: app.component.ts  app.routes.ts
ui/src/app/core/: api-config.service.ts  api.service.ts  data.service.ts  issues-state.service.ts  pipeline-state.service.ts  settings-state.service.ts
ui/src/app/shared/: active-step.pipe.ts  index.ts  outcome-class.pipe.ts  sev-class.pipe.ts
(+31 files in other folders)
