[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortifyai"
version = "0.1.0"
description = "Automated security dependency remediation pipeline using Fortify SSC and LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-google-vertexai>=1.0,<2.0",

    # GCP / Vertex AI
    "google-cloud-aiplatform>=1.60,<2.0",
    "google-cloud-secret-manager>=2.0,<3.0",

    # Fortify + HTTP
    "requests>=2.32,<3.0",

    # GitHub PR delivery
    "PyGithub>=2.3,<3.0",

    # Repository access
    "gitpython>=3.1,<4.0",

    # Java AST analysis
    "javalang>=0.13,<0.14",

    # Config / settings
    "pydantic-settings>=2.5,<3.0",

    # Logging
    "loguru>=0.7,<1.0",
]

[project.scripts]
fortifyai = "fortifyai:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
